Demo Selika/force-app/main/default/objects/Case/fields/Case_Assignment_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Case_Assignment_Timestamp__c</fullName>
    <label>Case Assignment Timestamp</label>
    <type>DateTime</type>
</CustomField>