Demo Selika/force-app/main/default/objects/Case/fields/Case_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Case_Feedback__c</fullName>
    <description>Feedback field used for the sentiment analysis demo</description>
    <label>Case Feedback</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>