Demo Selika/force-app/main/default/objects/Case/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>