Demo Selika/force-app/main/default/objects/Case/fields/CSAT__c.field-meta.xml
<CustomField>
    <fullName>CSAT__c</fullName>
    <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
    <label>CSAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>