Demo Selika/force-app/main/default/objects/Case/fields/DB_Case_Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>DB_Case_Duration_Hours__c</fullName>
    <inlineHelpText>Used by the Perfect Date Wizard</inlineHelpText>
    <label>DB Case Duration Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>