Demo Selika/force-app/main/default/objects/Case/fields/EDY_ORGCUSTOM__DB__c.field-meta.xml
<CustomField>
    <fullName>EDY_ORGCUSTOM__DB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DB</label>
    <type>Checkbox</type>
</CustomField>