Demo Selika/force-app/main/default/objects/Case/fields/EDY_ORGCUSTOM__Old_Description__c.field-meta.xml
<CustomField>
    <fullName>EDY_ORGCUSTOM__Old_Description__c</fullName>
    <label>Old Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>