Demo Selika/force-app/main/default/objects/Case/fields/EDY_ORGCUSTOM__Old_Subject__c.field-meta.xml
<CustomField>
    <fullName>EDY_ORGCUSTOM__Old_Subject__c</fullName>
    <label>Old Subject</label>
    <length>80</length>
    <type>Text</type>
</CustomField>