Demo Selika/force-app/main/default/objects/Case/fields/First_Contact_Close__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Close__c</fullName>
    <defaultValue>true</defaultValue>
    <description>What: Used by the Analytics Demo Data Tool. Do Not Remove. Used to mark cases that are closed on first contact, without requiring additional engagement with the customer.  Off by default.  Driven by workflow rule.</description>
    <label>First Contact Close</label>
    <type>Checkbox</type>
</CustomField>