Demo Selika/force-app/main/default/objects/Case/fields/HealthCloudGA__SourceAgencyMeasureVersion__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SourceAgencyMeasureVersion__c</fullName>
    <description>Version of the source agency's ID measure for this care gap.</description>
    <inlineHelpText>Version of the source agency's ID measure for this care gap.</inlineHelpText>
    <label>Source Agency Measure Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>