Demo Selika/force-app/main/default/objects/Case/fields/HealthCloudGA__SourceSystemID__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SourceSystemID__c</fullName>
    <description>Record ID in the source system.</description>
    <externalId>true</externalId>
    <inlineHelpText>Record ID in the source system.</inlineHelpText>
    <label>Source System ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>