Demo Selika/force-app/main/default/objects/Case/fields/inov8__PMT_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>inov8__PMT_Days_Open__c</fullName>
    <formula>if(ISBLANK(ClosedDate),
Now()- CreatedDate, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PMT Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>