Demo Selika/force-app/main/default/objects/Case/fields/inov8__PMT_Program__c.field-meta.xml
<CustomField>
    <fullName>inov8__PMT_Program__c</fullName>
    <formula>inov8__PMT_Project__r.inov8__Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PMT Program</label>
    <type>Text</type>
</CustomField>