Demo Selika/force-app/main/default/objects/Case/fields/inov8__PMT_Project__c.field-meta.xml
<CustomField>
    <fullName>inov8__PMT_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PMT Project</label>
    <referenceTo>inov8__PMT_Project__c</referenceTo>
    <relationshipLabel>Cases (Related Project)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>