Demo Selika/force-app/main/default/objects/Case/fields/MilestoneStatus__c.field-meta.xml
<CustomField>
    <fullName>MilestoneStatus__c</fullName>
    <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
    <label>Milestone Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>