Demo Selika/force-app/main/default/objects/Case/fields/Offer_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Offer_Voucher__c</fullName>
    <defaultValue>false</defaultValue>
    <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
    <label>Offer Voucher</label>
    <type>Checkbox</type>
</CustomField>