Demo Selika/force-app/main/default/objects/Case/fields/SDO_Einstein_Discovery_Leading_Causes__c.field-meta.xml
<CustomField>
    <fullName>SDO_Einstein_Discovery_Leading_Causes__c</fullName>
    <description>What: Used in Einstein Discovery Apex classes</description>
    <label>ED Leading Causes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>