Demo Selika/force-app/main/default/objects/Case/fields/SDO_Einstein_Discovery_Outcome__c.field-meta.xml
<CustomField>
    <fullName>SDO_Einstein_Discovery_Outcome__c</fullName>
    <description>What: Used in Einstein Discovery Apex classes</description>
    <label>ED Predicted CSAT</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>