Demo Selika/force-app/main/default/objects/Case/fields/SDO_OMS_Order_Summary__c.field-meta.xml
<CustomField>
    <fullName>SDO_OMS_Order_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What: Lookup to Order Summary Object</description>
    <label>Order Summary</label>
    <referenceTo>OrderSummary</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>