Demo Selika/force-app/main/default/objects/Case/fields/SDO_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>SDO_Quality_Score__c</fullName>
    <description>What: This field is used by the "Quality Score by Agent" component on the Service Executive Dashboard.  It indicates the "quality"--typically a post-call assessment by supervisor or quality-control personnel--that has been awarded to a case.  This is a number field, manually updated, but it could be accessed by a quality control system.</description>
    <label>Quality Score</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>