Demo Selika/force-app/main/default/objects/Case/fields/SDO_Servcie_Response_Time_mins__c.field-meta.xml
<CustomField>
    <fullName>SDO_Servcie_Response_Time_mins__c</fullName>
    <description>What: Used in reports</description>
    <label>Response Time (mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>