Demo Selika/force-app/main/default/objects/Case/fields/SDO_Service_Channel__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Channel__c</fullName>
    <description>What: Displays an image for the channel the case came from.</description>
    <formula>IMAGE( CASE( Origin, 
"Phone", "https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Phone.png", 
"Email", "https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Email.png", 
"Chat", "https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Chat.png", 
"Website", "https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Web.png", 
"Web", "https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Web.png",  
"Community", "https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Community.png", 
"Mobile Device", "https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Mobile.png", 
"Q&amp;A", "https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Automatic.png", 
"Facebook", "https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Facebook.png", 
"Twitter", "https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Twitter.png", 
"Google", "https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Google.png", 
"Instagram", "https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Instagram.png", 
"LinkedIn", "https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_LinkedIn.png", 
"Text", "https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_SMS.png", 
"SMS", "https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_SMS.png", 

"https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Automatic.png" ),"",22,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel</label>
    <type>Text</type>
</CustomField>