Demo Selika/force-app/main/default/objects/Case/fields/SDO_Service_Close_Summary__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Close_Summary__c</fullName>
    <description>What: Short summary of actions taken to resolve the Case. Used in KCS Flows</description>
    <inlineHelpText>Short summary of actions taken to resolve the Case.</inlineHelpText>
    <label>Close Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>