Demo Selika/force-app/main/default/objects/Case/fields/SDO_Service_Cost__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Cost__c</fullName>
    <description>What: used in reports</description>
    <formula>Case ( Origin, 'Phone', 3.5, 'Chat', 2, 'Email', 2, 'Website', 1.5, 'Portal', 1.5, 'Chatter Answer', 1.2, 1.75)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>