Demo Selika/force-app/main/default/objects/Case/fields/SDO_Service_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Customer_Type__c</fullName>
    <description>What: Used in Case Wrapup</description>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Small and Medium Business</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>