Demo Selika/force-app/main/default/objects/Case/fields/SDO_Service_SLA_Compliant__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_SLA_Compliant__c</fullName>
    <defaultValue>true</defaultValue>
    <description>What: This field is used by the "SLA Compliance" dashboard on the Service Executive dashboard.  It is checked by default, and unchecked when a case misses a milestone.</description>
    <label>SLA Compliant</label>
    <type>Checkbox</type>
</CustomField>