Demo Selika/force-app/main/default/objects/Case/fields/SDO_Service_Surveys_Comment__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Surveys_Comment__c</fullName>
    <description>Holds any comments text from the customer responding to Salesforce Surveys</description>
    <label>Survey Comment</label>
    <type>TextArea</type>
</CustomField>