Demo Selika/force-app/main/default/objects/Case/fields/SDO_Service_Surveys_CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Surveys_CSAT_Score__c</fullName>
    <label>Survey CSAT Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>