Demo Selika/force-app/main/default/objects/Case/fields/SDO_Service_Surveys_NPS__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Surveys_NPS__c</fullName>
    <label>Survey NPS</label>
    <length>2</length>
    <type>Text</type>
</CustomField>