Demo Selika/force-app/main/default/objects/Case/fields/SDO_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What: Service Territory Lookup</description>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>