Demo Selika/force-app/main/default/objects/Case/fields/SDO_Service_Urgency__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Urgency__c</fullName>
    <description>What: Used in My Resolution report.</description>
    <formula>IMAGE(CASE(Priority,
"Critical", "https://hls-ido.s3.amazonaws.com/critical.png",
"High", "https://hls-ido.s3.amazonaws.com/high.png",
"Medium", "https://hls-ido.s3.amazonaws.com/medium.png",
"Low", "https://hls-ido.s3.amazonaws.com/low.png","https://hls-ido.s3.amazonaws.com/critical.png"),"",22,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Urgency</label>
    <type>Text</type>
</CustomField>