Demo Selika/force-app/main/default/objects/Case/fields/SDO_SFS_Zip__c.field-meta.xml
<CustomField>
    <fullName>SDO_SFS_Zip__c</fullName>
    <description>What: Used by SFS for Cases</description>
    <label>Zip</label>
    <length>12</length>
    <type>Text</type>
</CustomField>