Demo Selika/force-app/main/default/objects/Case/fields/SDO_Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>SDO_Status_Indicator__c</fullName>
    <description>What: used on the layout and in reports</description>
    <formula>IMAGE(CASE( Status, 
"New", "https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_New.png", 
"Working","https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_Working.png", 
"Waiting on customer", "https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_Waiting.png", 
"Response Received","https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_Response.png", 
"Escalated", "https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_Warning.png", 
"Warning","https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_Warning.png", 
"Violation","https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_Warning.png", 
"https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_New.png" ),"Status",24,24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicator</label>
    <type>Text</type>
</CustomField>