Demo Selika/force-app/main/default/objects/Case/fields/Time_Open__c.field-meta.xml
<CustomField>
    <fullName>Time_Open__c</fullName>
    <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
    <label>Time Open</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>